[project]
name = "rooms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.42.0",
]

[dependency-groups]
dev = [
    "jedi-language-server>=0.43.1",
    "python-lsp-server>=1.12.2",
    "ruff>=0.9.6",
]
