[project]
name = "tarea-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.0",
]

[dependency-groups]
dev = [
    "jedi-language-server>=0.21.0",
    "python-language-server>=0.36.2",
    "ruff>=0.11.2",
]
